# cmdtyper

./: .gitignore  Cargo.toml  Dockerfile  PLAN.md  PLAN_V2.md  README.md  TODO.md  docker-compose.yml
data/commands/: 01_beginner.toml  02_basic.toml  03_advanced.toml  04_practical.toml  05_beginner_extra.toml  06_basic_search_system.toml  07_advanced_modern_cli.toml  08_practical_devops.toml  09_basic_process_permission.toml  10_advanced_shell_pipeline.toml  11_practical_network_remote.toml  12_basic_package_archive.toml  13_basic_system_monitor.toml  14_advanced_git_workflow.toml  15_practical_advanced_combos.toml  16_beginner_editor_misc.toml  17_basic_firewall_users.toml  18_advanced_curl_devtools.toml  19_practical_oneliners.toml
data/lessons/: awk.toml  cat.toml  cd.toml  chmod.toml  cp.toml  curl.toml  docker.toml  find.toml  git.toml  grep.toml  head.toml  ip.toml  kill.toml  ls.toml  mkdir.toml  mv.toml  nginx.toml  ping.toml  ps.toml  rm.toml  sed.toml  sort.toml  ssh.toml  systemctl.toml  tail.toml  tar.toml  top.toml  uniq.toml  wc.toml  wget.toml  xargs.toml
data/symbols/: pipe_redirect.toml  quotes_escape.toml  (+4 more)
review/: plan_review_20260314.md  plan_v2_review_20260314.md  socrates_final_20260314.md  socrates_reaudit_20260314.md  socrates_review_20260314.md  socrates_v03_accept_20260314.md  socrates_v03_final_20260314.md  socrates_v03_review_20260314.md  v3_plan_review_20260314.md  v3_plan_v2_review_20260314.md
src/: app.rs  event.rs  lib.rs  main.rs
tests/: behavior.rs  compat.rs  id_uniqueness.rs  parse_all.rs  tokens_consistency.rs  v03_behavior.rs
(+45 files in other folders)
