[package]
name = "cmdtyper"
version = "0.1.0"
edition = "2024"
description = "Linux 命令行打字练习 TUI 程序"
license = "MIT"
readme = "README.md"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
unicode-width = "0.2"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
