[package]
name = "cmdtyper"
version = "0.2.0"
edition = "2024"
description = "Linux 命令行交互式教学系统 — 终端模拟打字 + 体系化学习 + 模拟输出"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ZhaoLingSun/cmdtyper"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
unicode-width = "0.2"
anyhow = "1"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
